--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,35 @@
-node_modules/
-bower_components/
+# Logs
+logs
 *.log
+npm-debug.log*
 
-build/
-dist/
+# Yeoman configuration files
+.yo-rc.json
+
+# Dependency directories
+node_modules
+
+# Build generated files
+dist
+lib
+solution
+temp
+*.spapp
+
+# Coverage directory used by tools like istanbul
+coverage
+
+# OSX
+.DS_Store
+
+# Visual Studio files
+.ntvs_analysis.dat
+.vs
+bin
+obj
+
+# Resx Generated Code
+*.resx.ts
+
+# Styles Generated Code
+*.scss.ts
